- styled it up - split closed event into closed/expired - polishing

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
   <!-- Web Components -->
   <link rel="import" href="assets/bower_components/paper-material/paper-material.html">
   <link rel="import" href="assets/bower_components/paper-button/paper-button.html">
+  <link rel="import" href="assets/bower_components/paper-toast/paper-toast.html">
 </head>
 <body>
   <app-root>Loading...</app-root>
 </body>
+<script>
+  $(function(){ $(document).foundation(); });
+</script>
 </html>
